# expense-tracker-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  category.json  docker-compose.yml  gcp_deployment.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  databases.py  models.py  resources.py  schema.py
app/auth/: oauth_provider.py
app/repository/: expense_repository.py  finance_repository.py  session_repository.py  user_repository.py
app/services/: expense_service.py  finance_service.py  summary_service.py
