[project]
name = "expense-tracker"
version = "1.0.0"
description = "Async Expense Tracker MCP Server"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=2.12.0",
    "psycopg[binary]>=3.2.9",
    "psycopg-pool>=3.2.6",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
    "httpx>=0.27.0",
]

[tool.uv]
package = false